--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,13 +18,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a href="/components" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="/components/new" class="nav-link">New</a></li>
+                    <li class="nav-item"><a id="home" href="/components" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a id="new" href="/components/new" class="nav-link">New</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <% if(!currUser) { %>
-                        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/register">Sign Up</a></li>
+                        <li class="nav-item"><a id="login" class="nav-link" href="/login">Login</a></li>
+                        <li class="nav-item"><a id="register" class="nav-link" href="/register">Sign Up</a></li>
                     <% } else { %>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
