--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -59,17 +59,17 @@
                         +91 <%= camp.phone %>
                         <hr>
                     </div>
-                    <div class="row">
-                        <div class="pt-1 col-lg-9 col-md-8 col-sm-8 col-7 card-text text-muted">Submitted by <a href="#"><%= camp.author.username %></a> on <%= moment(camp.createdAt).format('MMMM Do YYYY') %></div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-5">
-                            <% if(currUser && camp.author.id.equals(currUser._id)) { %>
-                                <a title="Edit" href="/components/<%= camp._id %>/edit" class="btn btn-md btn-link"><i class="fas fa-pencil-alt"></i></a>
-                                <form class="delete-camp" action="/components/<%= camp._id %>?_method=DELETE" method="POST">
-                                    <button title="Delete" class="btn btn-md btn-link"><i class="fas fa-trash-alt"></i></button>
-                                </form>
-                            <% } %>
-                        </div>
+                    
+                    <small class="card-text text-muted">Submitted by <a href="#"><%= camp.author.username %></a> on <%= moment(camp.createdAt).format('MMMM Do YYYY') %></small>
+                    <div>
+                        <% if(currUser && camp.author.id.equals(currUser._id)) { %>
+                            <a title="Edit" href="/components/<%= camp._id %>/edit" class="px-0 btn btn-md btn-link"><i class="fas fa-pencil-alt"></i></a>
+                            <form class="delete-camp" action="/components/<%= camp._id %>?_method=DELETE" method="POST">
+                                <button title="Delete" class="btn btn-md btn-link"><i class="fas fa-trash-alt"></i></button>
+                            </form>
+                        <% } %>
                     </div>
+                    
                 </div>
             </div>
             
@@ -115,17 +115,16 @@
                                 </span>
                             </p>
                             <div class="text-muted mt-3 mb-2">
-                                <div><%= newComment.comment %></div>
+                                <span><%= newComment.comment %>
                                 <% if(currUser && newComment.author.id.equals(currUser._id)) { %>
-                                    <div class="float-right">
-                                        <a class="btn btn-sm btn-link" data-toggle="collapse" href="#comment-edit" role="button" aria-expanded="false" aria-controls="comment-edit">
+                                    <span class="float-right">
+                                        <a class="px-0 pr-1 btn btn-link" data-toggle="collapse" href="#comment-edit" role="button" aria-expanded="false" aria-controls="comment-edit">
                                         <i class="fas fa-pencil-alt"></i></a>
-                                        
                                         <form class="delete-camp" action="/components/<%= camp._id %>/comments/<%= newComment._id %>?_method=DELETE" method="POST">
-                                            <button class="btn btn-sm btn-link"><i class="fas fa-trash-alt"></i></button>
+                                            <button class="px-0 btn btn-link"><i class="fas fa-trash-alt"></i></button>
                                         </form>
-                                        
-                                    </div>
+                                    </span>    
+                                </span>
                                     <div class="mt-4 text-dark collapse" id="comment-edit">
                                         <form action="/components/<%= camp._id %>/comments/<%= newComment._id %>?_method=PUT" method="POST">
                                             <div class="form-group">
