--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,31 +12,33 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="/">YelpCamp</a>
-            <button class="navbar-toggler border-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a id="home" href="/components" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a id="new" href="/components/new" class="nav-link">New</a></li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <% if(!currUser) { %>
-                        <li class="nav-item"><a id="login" class="nav-link" href="/login">Login</a></li>
-                        <li class="nav-item"><a id="register" class="nav-link" href="/register">Sign Up</a></li>
-                    <% } else { %>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <i class="fa fa-user"></i> <%= currUser.fullName %>
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navDropdown">
-                              <a class="dropdown-item" href="#">Profile</a>
-                              <a class="dropdown-item" href="/logout">Logout</a>
-                            </div>
-                        </li>
-                    <% } %>
-                </ul>
+            <div class="container">
+                <a class="navbar-brand" href="/">YelpCamp</a>
+                <button class="navbar-toggler border-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><a id="home" href="/components" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a id="new" href="/components/new" class="nav-link">New</a></li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <% if(!currUser) { %>
+                            <li class="nav-item"><a id="login" class="nav-link" href="/login">Login</a></li>
+                            <li class="nav-item"><a id="register" class="nav-link" href="/register">Sign Up</a></li>
+                        <% } else { %>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-user"></i> <%= currUser.fullName %>
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navDropdown">
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="/logout">Logout</a>
+                                </div>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
             </div>
         </nav>
 
